--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p>Click Me !!!</p>
 </div>
 <div onclick = "quote_dark()" class = "section-style">
-<img src = "dark.jpeg" alt="" />
+<img src = "please.JPEG" alt="" />
 <p>Click Me !!!</p>
 </div>
 </div>
